transaction-service/transaction-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: transaction-service
        image: quay.io/wdovey/bank-transaction-service:1.0
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 9080
