transaction-service/transaction-service/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: transaction-service
spec:
  to:
    kind: Service
    name: transaction-service
